Fix: hide horizontal overflow for unwanted scrolling

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@
     box-sizing: border-box;
     outline: none;
     font-family: 'Nunito',sans-serif;
+     overflow-x: hidden;
 }
 
 /* body */
